--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Admincast bootstrap 4 & angular 5 admin template, Шаблон админки</title>
-  <base href="./">
-
+  <title>School Management System</title>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
