--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>School Management System</title>
@@ -9,9 +10,19 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
-  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js" type="text/javascript"></script>
 </head>
+
 <body>
   <app-root></app-root>
+
+
+  <!-- Resources -->
+  <script src="https://www.amcharts.com/lib/3/amcharts.js" type="text/javascript"></script>
+  <script src="https://www.amcharts.com/lib/3/serial.js" type="text/javascript"></script>
+  <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js" type="text/javascript"></script>
+  <script src="https://www.amcharts.com/lib/3/themes/light.js" type="text/javascript"></script>
 </body>
+
 </html>
