api change to https link

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <base href='/'>
   <meta charset="utf-8">
   <title>School Management System</title>
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
